[package]
name = "simple-websockets"
version = "0.1.6"
authors = ["Flying-Toast"]
edition = "2021"
license = "MIT"
description = "Fast and efficient WebSocket server with an easy API"
homepage = "https://github.com/Flying-Toast/simple-websockets"
repository = "https://github.com/Flying-Toast/simple-websockets"
keywords = ["websocket", "web", "async", "server", "network"]
categories = ["web-programming::websocket", "web-programming", "network-programming", "concurrency", "asynchronous"]

[dependencies]
tokio-tungstenite = "0.20"
tokio = { version = "1.3", features = ["full"] }
futures-util = "0.3"
flume = "0.10"

[dev-dependencies]
tungstenite = {version = "0.20.0", features = ["native-tls"]}
url = "2.2.2"
